Added SerilogSettings to appsettings.json Serilog sinks and Loki settings are now customizable

--- a/JF91.SerilogWithLoki.Net7/appsettings.json
+++ b/JF91.SerilogWithLoki.Net7/appsettings.json
@@ -4,5 +4,14 @@
       "Default": "Debug"
     }
   },
+  "SerilogSettings": {
+    "SerilogSinks": {
+      "Console": true,
+      "Loki": true
+    },
+    "LokiSettings": {
+      "Url": "http://localhost:3100"
+    }
+  },
   "AllowedHosts": "*"
 }
