--- a/JF91.SerilogWithLoki/JF91.SerilogWithLoki.csproj
+++ b/JF91.SerilogWithLoki/JF91.SerilogWithLoki.csproj
@@ -12,6 +12,7 @@
         <PackageProjectUrl>https://github.com/JoaoFranco91/JF91.SerilogWithLoki.Net7</PackageProjectUrl>
         <PackageLicenseUrl>https://opensource.org/license/bsd-3-clause/</PackageLicenseUrl>
         <RepositoryUrl>https://github.com/JoaoFranco91/JF91.SerilogWithLoki.Net7</RepositoryUrl>
+        <Version>1.2</Version>
     </PropertyGroup>
 
     <ItemGroup>
