Custom Labels added to appsettings.json SerilogSettings.cs extended

--- a/JF91.SerilogWithLoki.Net7/appsettings.json
+++ b/JF91.SerilogWithLoki.Net7/appsettings.json
@@ -10,7 +10,11 @@
       "Loki": true
     },
     "LokiSettings": {
-      "Url": "http://localhost:3100"
+      "Url": "http://localhost:3100",
+      "CustomLabels": [
+        "Label1",
+        "Label2"
+      ]
     }
   },
   "AllowedHosts": "*"
