Added GlobalLogContext Added ExceptionDetails Destructor

--- a/JF91.SerilogWithLoki.Net7/appsettings.json
+++ b/JF91.SerilogWithLoki.Net7/appsettings.json
@@ -1,7 +1,9 @@
 {
   "Serilog": {
+    "Using": [ "Serilog.Exceptions" ],
+    "Enrich": [ "WithExceptionDetails" ],
     "MinimumLevel": {
-      "Default": "Debug"
+      "Default": "Information"
     }
   },
   "SerilogSettings": {
