--- a/JF91.SerilogWithLoki/JF91.SerilogWithLoki.csproj
+++ b/JF91.SerilogWithLoki/JF91.SerilogWithLoki.csproj
@@ -28,6 +28,7 @@ Version 1.2.0:
       <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
       <PackageReference Include="Serilog.Enrichers.CorrelationId" Version="3.0.1" />
       <PackageReference Include="Serilog.Enrichers.Environment" Version="2.2.0" />
+      <PackageReference Include="Serilog.Enrichers.GlobalLogContext" Version="3.0.0" />
       <PackageReference Include="Serilog.Exceptions" Version="8.4.0" />
       <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
       <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
