--- a/JF91.SerilogWithLoki/JF91.SerilogWithLoki.csproj
+++ b/JF91.SerilogWithLoki/JF91.SerilogWithLoki.csproj
@@ -12,8 +12,11 @@
         <PackageProjectUrl>https://github.com/JoaoFranco91/JF91.SerilogWithLoki.Net7</PackageProjectUrl>
         <PackageLicenseUrl>https://opensource.org/license/bsd-3-clause/</PackageLicenseUrl>
         <RepositoryUrl>https://github.com/JoaoFranco91/JF91.SerilogWithLoki.Net7</RepositoryUrl>
-        <Version>1.3.2</Version>
-        <PackageReleaseNotes>Version 1.3.2:
+        <Version>1.3.3</Version>
+        <PackageReleaseNotes>Version 1.3.3
+Added delegate to ConfigureSerilog providing ability to customize Loki connection string
+
+Version 1.3.2:
 Added GlobalLogContext
 Added ExceptionDetails Destructor
 
